--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 
 body {
-    @apply bg-gray-900 text-gray-100 antialiased;
+    @apply bg-white text-black antialiased;
 }
 
 ::-webkit-scrollbar {
